[gd_scene load_steps=31 format=2]

[ext_resource path="res://Objects/Commanders/DrDeficit.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/Sprites/Tile/dev_tileset.tres" type="TileSet" id=2]
[ext_resource path="res://assets/Sprites/Tile/UI Tileset/wastelandui.tres" type="TileSet" id=3]
[ext_resource path="res://Scripts/BattleMap.gd" type="Script" id=4]
[ext_resource path="res://Objects/BattleMap Objects/Cursor.tscn" type="PackedScene" id=5]
[ext_resource path="res://addons/carmel4a97.RTS_Camera2D/RTS-Camera2D.gd" type="Script" id=6]
[ext_resource path="res://Objects/BattleMap Objects/Grid.tres" type="Resource" id=7]
[ext_resource path="res://Objects/BattleMap Objects/UnitOverlay.tscn" type="PackedScene" id=8]
[ext_resource path="res://Objects/BattleMap Objects/UnitPath.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scripts/GameBoard.gd" type="Script" id=10]
[ext_resource path="res://Objects/BattleMap Objects/PopupMenu.tscn" type="PackedScene" id=11]
[ext_resource path="res://Objects/BattleMap Objects/Player.tscn" type="PackedScene" id=12]
[ext_resource path="res://Objects/BattleMap Objects/TurnQueue.tscn" type="PackedScene" id=13]
[ext_resource path="res://Objects/Commanders/RedLine.tscn" type="PackedScene" id=14]
[ext_resource path="res://Objects/Units/Junior.tscn" type="PackedScene" id=15]
[ext_resource path="res://Dialog/DialogBox.tscn" type="PackedScene" id=16]
[ext_resource path="res://Objects/BattleMap Objects/CombatCursor.tscn" type="PackedScene" id=17]
[ext_resource path="res://Objects/Interface/CommanderUI.tscn" type="PackedScene" id=18]
[ext_resource path="res://assets/Sprites/Property/propertytileset.tres" type="TileSet" id=19]
[ext_resource path="res://assets/Sprites/Property/devproperty.tres" type="TileSet" id=20]
[ext_resource path="res://Scripts/AudioStreamPlayer.gd" type="Script" id=21]
[ext_resource path="res://assets/Sound Effects/interface/bong_001.ogg" type="AudioStream" id=22]
[ext_resource path="res://Objects/BattleMap Objects/SoundManager.tscn" type="PackedScene" id=23]
[ext_resource path="res://Objects/Interface/PowerActivated.tscn" type="PackedScene" id=24]
[ext_resource path="res://assets/Sprites/Tile/WastelandTileset.tres" type="TileSet" id=25]
[ext_resource path="res://Objects/BattleMap Objects/FCTManager.tscn" type="PackedScene" id=26]
[ext_resource path="res://Objects/Interface/update-ui.tscn" type="PackedScene" id=38]
[ext_resource path="res://Objects/Interface/NewTurnUi.tscn" type="PackedScene" id=40]
[ext_resource path="res://Objects/BattleMap Objects/AIControl.tscn" type="PackedScene" id=41]
[ext_resource path="res://Objects/BattleMap Objects/BuyMenu.tscn" type="PackedScene" id=46]

[node name="BattleMap" type="Node2D"]
script = ExtResource( 4 )
level_number = 4
victory_eliminate = false
victory_hq = false
xMin = 5
xMax = 22
yMin = 2
yMax = 13
gamegrid = ExtResource( 7 )

[node name="Devtiles" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 131077, 1, 0, 131078, 1, 0, 131079, 1, 0, 131080, 1, 0, 131081, 1, 0, 131082, 1, 0, 131083, 2, 0, 131084, 0, 0, 131085, 0, 0, 131086, 0, 0, 131087, 0, 0, 131088, 0, 0, 131089, 0, 0, 131090, 0, 0, 131091, 0, 0, 131092, 0, 0, 131093, 0, 0, 131094, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 196617, 0, 0, 196618, 2, 0, 196619, 0, 0, 196620, 0, 0, 196621, 0, 0, 196622, 0, 0, 196623, 0, 0, 196624, 0, 0, 196625, 0, 0, 196626, 0, 0, 196627, 0, 0, 196628, 0, 0, 196629, 0, 0, 196630, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0, 262153, 0, 0, 262154, 0, 0, 262155, 2, 0, 262156, 0, 0, 262157, 0, 0, 262158, 0, 0, 262159, 4, 0, 262160, 4, 0, 262161, 4, 0, 262162, 4, 0, 262163, 4, 0, 262164, 4, 0, 262165, 0, 0, 262166, 0, 0, 327685, 0, 0, 327686, 0, 0, 327687, 0, 0, 327688, 0, 0, 327689, 0, 0, 327690, 0, 0, 327691, 2, 0, 327692, 2, 0, 327693, 0, 0, 327694, 0, 0, 327695, 0, 0, 327696, 0, 0, 327697, 0, 0, 327698, 0, 0, 327699, 0, 0, 327700, 4, 0, 327701, 0, 0, 327702, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 393225, 0, 0, 393226, 0, 0, 393227, 0, 0, 393228, 2, 0, 393229, 2, 0, 393230, 0, 0, 393231, 0, 0, 393232, 0, 0, 393233, 0, 0, 393234, 0, 0, 393235, 0, 0, 393236, 4, 0, 393237, 0, 0, 393238, 0, 0, 458757, 1, 0, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 458761, 0, 0, 458762, 1, 0, 458763, 1, 0, 458764, 0, 0, 458765, 2, 0, 458766, 2, 0, 458767, 2, 0, 458768, 0, 0, 458769, 0, 0, 458770, 0, 0, 458771, 0, 0, 458772, 4, 0, 458773, 0, 0, 458774, 0, 0, 524293, 5, 0, 524294, 5, 0, 524295, 5, 0, 524296, 5, 0, 524297, 5, 0, 524298, 5, 0, 524299, 5, 0, 524300, 5, 0, 524301, 5, 0, 524302, 5, 0, 524303, 5, 0, 524304, 5, 0, 524305, 5, 0, 524306, 5, 0, 524307, 5, 0, 524308, 4, 0, 524309, 5, 0, 524310, 5, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 0, 0, 589838, 2, 0, 589839, 2, 0, 589840, 2, 0, 589841, 0, 0, 589842, 0, 0, 589843, 1, 0, 589844, 4, 0, 589845, 0, 0, 589846, 0, 0, 655365, 0, 0, 655366, 0, 0, 655367, 0, 0, 655368, 0, 0, 655369, 0, 0, 655370, 0, 0, 655371, 0, 0, 655372, 0, 0, 655373, 0, 0, 655374, 1, 0, 655375, 2, 0, 655376, 0, 0, 655377, 0, 0, 655378, 0, 0, 655379, 0, 0, 655380, 4, 0, 655381, 1, 0, 655382, 0, 0, 720901, 0, 0, 720902, 0, 0, 720903, 0, 0, 720904, 4, 0, 720905, 4, 0, 720906, 4, 0, 720907, 4, 0, 720908, 4, 0, 720909, 4, 0, 720910, 4, 0, 720911, 4, 0, 720912, 4, 0, 720913, 4, 0, 720914, 4, 0, 720915, 4, 0, 720916, 4, 0, 720917, 0, 0, 720918, 1, 0, 786437, 0, 0, 786438, 0, 0, 786439, 0, 0, 786440, 0, 0, 786441, 0, 0, 786442, 0, 0, 786443, 0, 0, 786444, 0, 0, 786445, 0, 0, 786446, 2, 0, 786447, 2, 0, 786448, 2, 0, 786449, 0, 0, 786450, 0, 0, 786451, 0, 0, 786452, 0, 0, 786453, 0, 0, 786454, 0, 0, 851973, 0, 0, 851974, 0, 0, 851975, 0, 0, 851976, 1, 0, 851977, 0, 0, 851978, 1, 0, 851979, 0, 0, 851980, 1, 0, 851981, 2, 0, 851982, 2, 0, 851983, 2, 0, 851984, 0, 0, 851985, 0, 0, 851986, 0, 0, 851987, 0, 0, 851988, 0, 0, 851989, 0, 0, 851990, 1, 0 )

[node name="RenderedTiles" type="TileMap" parent="."]
tile_set = ExtResource( 25 )
cell_size = Vector2( 16, 16 )
format = 1

[node name="RenderedTiles2" type="TileMap" parent="."]
tile_set = ExtResource( 25 )
cell_size = Vector2( 16, 16 )
format = 1

[node name="Devproperty" type="TileMap" parent="."]
tile_set = ExtResource( 20 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 196616, 1, 0, 196623, 13, 0, 196628, 12, 0, 327687, 1, 0, 327696, 13, 0, 327699, 13, 0, 327701, 13, 0, 393225, 1, 0, 458758, 1, 0, 458770, 13, 0, 458773, 13, 0, 655366, 7, 0, 655369, 7, 0, 655370, 7, 0, 655373, 1, 0, 655378, 1, 0, 720903, 8, 0, 720917, 1, 0, 786438, 6, 0, 786440, 8, 0, 786443, 7, 0, 851975, 7, 0, 851987, 1, 0 )

[node name="PropertyTiles" type="TileMap" parent="."]
tile_set = ExtResource( 19 )
cell_size = Vector2( 16, 16 )
format = 1

[node name="GameBoard" type="YSort" parent="."]
script = ExtResource( 10 )
gamegrid = ExtResource( 7 )

[node name="UnitOverlay" parent="GameBoard" instance=ExtResource( 8 )]

[node name="UnitPath" parent="GameBoard" instance=ExtResource( 9 )]

[node name="Units" type="YSort" parent="GameBoard"]

[node name="Junior" parent="GameBoard/Units" instance=ExtResource( 15 )]
position = Vector2( 168.38, 167.044 )
player_path = NodePath("../../../TurnQueue/Human")
cell = Vector2( 10, 10 )

[node name="Cursor" parent="GameBoard" instance=ExtResource( 5 )]

[node name="SoundMoveCursor" type="AudioStreamPlayer" parent="GameBoard/Cursor"]
stream = ExtResource( 22 )
volume_db = -15.0

[node name="CombatCursor" parent="GameBoard" instance=ExtResource( 17 )]
visible = false

[node name="CanvasLayer" type="CanvasLayer" parent="GameBoard"]
layer = 2

[node name="FCTManager" parent="GameBoard/CanvasLayer" instance=ExtResource( 26 )]
visible = false

[node name="SoundManager" parent="GameBoard" instance=ExtResource( 23 )]

[node name="RTS-Camera2D" type="Camera2D" parent="."]
position = Vector2( 239.604, 134.819 )
current = true
limit_left = 0
limit_top = 0
limit_right = 480
limit_bottom = 270
smoothing_enabled = true
editor_draw_limits = true
script = ExtResource( 6 )
drag = false
edge = true
wheel = false
camera_margin = 40

[node name="PopupMenu" parent="." instance=ExtResource( 11 )]
margin_left = 18.0
margin_top = 43.0
margin_right = 34.0
margin_bottom = 63.0
popup_exclusive = true
hide_on_item_selection = false

[node name="BuyMenu" parent="." instance=ExtResource( 46 )]

[node name="TurnQueue" parent="." instance=ExtResource( 13 )]
gamegrid = ExtResource( 7 )

[node name="Human" parent="TurnQueue" instance=ExtResource( 12 )]
playerName = "University"
commander_path = NodePath("RedLine")
player_colour = 1

[node name="RedLine" parent="TurnQueue/Human" instance=ExtResource( 14 )]
player_path = NodePath("..")

[node name="Computer1" parent="TurnQueue" instance=ExtResource( 12 )]
position = Vector2( -0.529724, 0 )
playerName = "Science"
team = 3
commander_path = NodePath("DrDefecit")
player_colour = 2
facing = "Left"
computerAI = true

[node name="DrDefecit" parent="TurnQueue/Computer1" instance=ExtResource( 1 )]
player_path = NodePath("..")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="CommanderUI" parent="CanvasLayer" instance=ExtResource( 18 )]

[node name="update-ui" parent="CanvasLayer" instance=ExtResource( 38 )]
gamegrid = ExtResource( 7 )
map_builder_tileset = ExtResource( 3 )

[node name="DialogBox" parent="CanvasLayer" instance=ExtResource( 16 )]
visible = false
margin_left = -210.261
margin_top = -124.832
margin_right = 220.739
margin_bottom = -9.83203

[node name="PowerActivated" parent="CanvasLayer" instance=ExtResource( 24 )]

[node name="NewTurnUi" parent="CanvasLayer" instance=ExtResource( 40 )]
margin_left = -239.123
margin_top = -134.568
margin_right = 240.877
margin_bottom = 135.432

[node name="Music Player" type="AudioStreamPlayer" parent="."]
volume_db = -30.0
script = ExtResource( 21 )

[node name="AIControl" parent="." instance=ExtResource( 41 )]
gamegrid = ExtResource( 7 )

[connection signal="income_changed" from="GameBoard" to="CanvasLayer/CommanderUI" method="income_changed"]
[connection signal="cancel_pressed" from="GameBoard/Cursor" to="GameBoard" method="_on_Cursor_cancel_pressed"]
[connection signal="cancel_released" from="GameBoard/Cursor" to="GameBoard" method="_on_Cursor_cancel_released"]
[connection signal="moved" from="GameBoard/Cursor" to="GameBoard" method="_on_Cursor_moved"]
[connection signal="moved" from="GameBoard/Cursor" to="CanvasLayer/update-ui" method="_on_Cursor_moved"]
[connection signal="select_pressed" from="GameBoard/Cursor" to="GameBoard" method="_on_Cursor_select_pressed"]
[connection signal="combat_selection" from="GameBoard/CombatCursor" to="GameBoard" method="_on_CombatCursor_combat_selection"]
[connection signal="moved" from="GameBoard/CombatCursor" to="GameBoard" method="_on_CombatCursor_moved"]
[connection signal="moved" from="GameBoard/CombatCursor" to="CanvasLayer/update-ui" method="_on_Cursor_moved"]
[connection signal="gui_input" from="PopupMenu" to="PopupMenu" method="_on_PopupMenu_gui_input"]
[connection signal="id_pressed" from="PopupMenu" to="PopupMenu" method="_on_PopupMenu_id_pressed"]
[connection signal="popup_hide" from="PopupMenu" to="GameBoard" method="_on_PopupMenu_popup_hide"]
[connection signal="selection" from="PopupMenu" to="GameBoard" method="_on_PopupMenu_selection"]
[connection signal="turn_changed" from="TurnQueue" to="CanvasLayer/CommanderUI" method="_on_TurnQueue_turn_changed"]
[connection signal="funds_changed" from="TurnQueue/Human" to="CanvasLayer/CommanderUI" method="funds_changed"]
[connection signal="power_changed" from="TurnQueue/Human/RedLine" to="CanvasLayer/CommanderUI" method="power_changed"]
[connection signal="funds_changed" from="TurnQueue/Computer1" to="CanvasLayer/CommanderUI" method="funds_changed"]
[connection signal="power_changed" from="TurnQueue/Computer1/DrDefecit" to="CanvasLayer/CommanderUI" method="power_changed"]
